--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <body>
 <h1>e-yuuki.org</h1>
 
-<p>このページは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書である。</p>
-
-<p>このページに関する批判・議論・指摘・改善案は榎本までメールで連絡してほしい。このWebページは著作権者名を表記する限り再頒布可能だが、このWebページによって生じるあらゆる損害について一切責任はとらないものとする。</p>
-
-<p>内容は予告なく変更される。最終更新日が明記されているページもある。しかし最近、HTMLファイルを<a href="https://github.com/user340/www">https://github.com/user340/www</a>で管理し始めたので正確な差分や変更日時はここから確認できることもある。</p>
-
 <hr>
 <ul>
 <li><a href="#articles">Web Articles</a>
@@ -34,6 +28,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <li><a href="#papers">Papers and Presentations</a></li>
 <li><a href="#links">Links</a></li>
 <li><a href="#fingerprint">Fingerprint</a>
+<li><a href="#about">About</a></li>
 </ul>
 </li>
 </ul>
@@ -79,6 +74,15 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <h2 id="fingerprint">Fingerprint</h2>
 <pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
+
+<h2 id="about">About</h2>
+
+<p>このページは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書である。</p>
+
+<p>このページに関する批判・議論・指摘・改善案は榎本までメールで連絡してほしい。このWebページは著作権者名を表記する限り再頒布可能だが、このWebページによって生じるあらゆる損害について一切責任はとらないものとする。</p>
+
+<p>内容は予告なく変更される。最終更新日が明記されているページもある。しかし最近、HTMLファイルを<a href="https://github.com/user340/www">https://github.com/user340/www</a>で管理し始めたので正確な差分や変更日時はここから確認できることもある。</p>
+
 <hr>
 <footer>
 <address>
