--- a/introduction/index.html
+++ b/introduction/index.html
@@ -40,6 +40,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
       <li><a href="./clamav.html">アンチウイルス&mdash;&mdash;ClamAV&reg;</a></li>
     </ol>
   </li>
+  <li><a href="./desktop_howto.html">デスクトップ環境の作り方</a></li>
   <li>一般ユーザ向けソフトウェア
     <ol>
       <li>デスクトップ環境
