--- a/introduction/index.html
+++ b/introduction/index.html
@@ -24,15 +24,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <h2>目次</h2>
 <ol>
   <li>はじめに</li>
-  <li>OSのインストールと初期設定
-    <ol>
-      <li>NetBSDのインストール</li>
-      <li>ネットワーク接続</li>
-      <li>すべて遮断する</li>
-      <li>ユーザの作成</li>
-      <li>pkgsrc(7)のインストール</li>
-    </ol>
-  </li>
+  <li><a href="./install.html">OSのインストールと初期設定</a></li>
   <li>管理者向けソフトウェア
     <ol>
       <li><a href="./openssh.html">リモートログイン&mdash;&mdash;OpenSSH</a></li>
