--- a/netbsd/pkg_install.html
+++ b/netbsd/pkg_install.html
@@ -5,15 +5,14 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
 @media print, screen and (min-width:640px){
-*{max-width:40em;}
 code{font-size:90%; line-height:1.4;}
-body{margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:3em; line-height:1.75; letter-spacing:0.05em;}
+.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;}
 pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
 @media only screen and (max-width:640px){*{max-width:100%; width:100%;}}
 </style>
 <title>e-yuuki.org</title>
 </head>
-<body>
+<body><div class="inner">
 <h1>pkg_installについて</h1>
 <p>Last Update <time>2018-09-22</time></p>
 <hr>
@@ -142,6 +141,6 @@ Yuuki Enomoto <a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>
 </address>
 <p><small>Copyright (C) 2015,2016,2017,2018 Yuuki Enomoto</small></p>
 </footer>
-</body>
+</div></body>
 </html>
 
