--- a/introduction/index.html
+++ b/introduction/index.html
@@ -5,15 +5,14 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
 @media print, screen and (min-width:640px){
-*{max-width:40em;}
 code{font-size:90%; line-height:1.4;}
-body{margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:3em; line-height:1.75; letter-spacing:0.05em;}
+.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;}
 pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
 @media only screen and (max-width:640px){*{max-width:100%; width:100%;}}
 </style>
 <title>e-yuuki.org</title>
 </head>
-<body>
+<body><div class="inner">
 <h1>Unix入門</h1>
 <hr>
 <p>本書の目的は（1）資料が分散されがちだが、Unix系OS上で一般的に使用されるソフトウェアの使用方法を一箇所にまとめ更新していくことと（2）大学の講義や研究室および企業の研修資料として使うに耐えられる品質の自由な入門文書を残すことにある。</p>
@@ -73,6 +72,6 @@ Yuuki Enomoto <a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>
 </address>
 <p><small>Copyright (C) 2015,2016,2017,2018 Yuuki Enomoto</small></p>
 </footer>
-</body>
+</div></body>
 </html>
 
