--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 code{font-size:90%; line-height:1.4;}
 .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;}
 pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
-@media only screen and (max-width:640px){*{max-width:100%; width:100%;}}
+@media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}
 </style>
 <title>e-yuuki.org</title>
 </head>
