--- a/introduction/install.html
+++ b/introduction/install.html
@@ -35,9 +35,9 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <p>仮想マシンにNetBSDをインストールするのであれば、<a href="https://legacyos.ichmy.0t0.jp/netbsd/">NetBSDで遊ぼうのこーな</a>を参考に仮想化ソフトウェアを選ぶといい。このページから引用し、さらに僕が普段使っているBhyveも加えると次のようになる。</p>
 
-<table>
+<table border="1">
 <tr>
-  <th>仮想化ソフトウェア</th>
+  <th>ソフトウェア</th>
   <th>Addin</th>
   <th>状況</th>
 </tr>
