--- a/introduction/install.html
+++ b/introduction/install.html
@@ -33,7 +33,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <p>多くのIT技術系ブログでNetBSDのインストール手順について画像つきで詳しく解説されている。しかし僕はThe NetBSD Projectから提供されている<a href="https://www.netbsd.org/docs/guide/en/chap-exinst.html">Chapter 3. Example Installation</a>を読むことをおすすめする。これがあるのでインストール手順について改めて紙面を割く必要もない。この文書は英語だが、どのみちNetBSDのインストーラも英語なので気にしなくていい。</p>
 
-<p>仮想マシンにNetBSDをインストールするのであれば、<a href="https://legacyos.ichmy.0t0.jp/netbsd/">NetBSDで遊ぼうのこーな</a>を参考に仮想化ソフトウェアを選ぶといい。このページから引用し、さらに僕が普段使っているBhyveも加えると次のようになる。</p>
+<p>仮想マシンにNetBSDをインストールするのであれば、<a href="https://legacyos.ichmy.0t0.jp/netbsd/">NetBSDで遊ぼうのこーな</a>を参考に仮想化ソフトウェアを選ぶといい。このページから引用し、さらに僕が普段使っているBhyveや使ったことのあるXenも加えると次のようになる。</p>
 
 <table border="1">
 <tr>
@@ -66,11 +66,105 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
   <td>?</td>
   <td>vm-bhyveで確認。</td>
 </tr>
+<tr>
+  <td>Xen</td>
+  <td>?</td>
+  <td>Domain 0はNetBSD</td>
+</tr>
 </table>
 
 <p>物理的な環境にインストールする場合、まずは動作が確認されている機器を慎重に選ぶところから始まる。ThinkPadはだいたい動くようだ。僕が使ってきたマシンについては<a href="../netbsd/thinkpad.html">NetBSD on ThinkPad</a>を参照してほしい。</p>
 
 <h2 id="network">ネットワーク接続</h2>
+<p><code>ifconfig(8)</code>でネットワークインタフェースの名前を確認する。有線接続する場合はmedia: Ethernet autoselect、無線接続する場合はmedia: IEEE802.11となっているネットワークインタフェースを探す。</p>
+
+<pre><code># ifconfig
+wm0: flags=0x8802<BROADCAST,SIMPLEX,MULTICAST> mtu 1500
+        capabilities=7ff80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx>
+        capabilities=7ff80<TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx,TCP6CSUM_Rx>
+        capabilities=7ff80<TCP6CSUM_Tx,UDP6CSUM_Rx,UDP6CSUM_Tx,TSO6>
+        enabled=0
+        ec_capabilities=7<VLAN_MTU,VLAN_HWTAGGING,JUMBO_MTU>
+        ec_enabled=0
+        address: 4d:a8:1f:24:ab:03
+        media: Ethernet autoselect (none)
+        status: no carrier
+iwn0: flags=0x8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 1500
+        ssid SSID nwkey *****
+        powersave off
+        bssid 6d:d4:18:01:a6:14 chan 10
+        address: 7d:99:25:7a:23:c9
+        media: IEEE802.11 autoselect (OFDM36 mode 11g)
+        status: active
+        inet 192.168.100.102/24 broadcast 192.168.100.255 flags 0x0
+        inet6 fe80::629b:d0c1:135b:eb24%iwn0/64 flags 0x0 scopeid 0x2
+        inet6 2001:268:c146:5657:63c1:78ae:4457:e5ae/64 flags 0x0
+lo0: flags=0x8049<UP,LOOPBACK,RUNNING,MULTICAST> mtu 33624
+        inet 127.0.0.1/8 flags 0x0
+        inet6 ::1/128 flags 0x20<NODAD>
+        inet6 fe80::1%lo0/64 flags 0x0 scopeid 0x3</code></pre>
+
+<p>この出力は既に無線接続が設定されているものだが、ここで有線接続のネットワークインタフェースはwm0、無線ではiwn0ということがmediaの行から分かる。</p>
+
+<p>ネットワークの設定後はnetworkデーモンを再起動する。</p>
+
+<pre><code># service network restart</code></pre>
+
+<h3>有線接続（固定IPアドレス）</h3>
+<p>あらかじめどのIPアドレスを使うか定められており有線接続する場合、<code>ifconfig.if(5)</code>を書く。IPアドレスが192.168.200.40/24でネットワークインタフェースがwm0だとすると/etc/ifconfig.wm0を次のように編集する。</p>
+
+<pre><code>inet 192.168.200.40 netmask 255.255.255.0</code></pre>
+
+<h3>有線接続（動的IPアドレス）</h3>
+<p>DHCPサーバに問い合わせてIPアドレスを動的に割り振るネットワーク環境の場合<code>dhcpcd(8)</code>を使うだけでいい。ネットワークインタフェースがwm0だとすると次のように実行する。</p>
+
+<pre><code># dhcpcd wm0</code></pre>
+
+<p>OS起動時に自動的に<code>dhcpcd(8)</code>を実行するには/etc/rc.confに次の2行を追記する。</p>
+
+<pre><code>dhcpcd=YES
+dhcpcd_flags="wm0"</code></pre>
+
+<h3>無線接続（動的IPアドレス）</h3>
+<p>無線を使うには次の手順に従う。</p>
+
+<li>
+  <ol>SSIDとパスフレーズ（パスワード）の確認</ol>
+  <ol><code>wpa_passphrase(8)</code>の実行</ol>
+  <ol><code>wpa_supplicant(8)</code>の実行</ol>
+  <ol><code>dhcpcd(8)</code>の実行</ol>
+</li>
+
+<p>まず無線接続に必要なSSIDとパスフレーズを控える。ここではSSIDを<i>home-ssid</i>、パスフレーズを<i>password</i>、ネットワークインタフェースはiwm0とする。</p>
+
+<p><code>wpa_passphrase ssid passphrase</code>という形式で<code>wpa_passphrase(8)</code>を実行する。</p>
+
+<pre><code># wpa_passphrase home-ssid password
+network={
+        ssid="home-ssid"
+        #psk="password"
+        psk=d5264ac3e0512b34b5f6856bbb224b87ce84256de9023decb076ff974fbe06a2
+}</code></pre>
+
+<p>このコマンドで得られた出力を/etc/wpa_supplicant.confに書き込む。リダイレクトしてもいい。</p>
+
+<pre><code># wpa_passphrase home-ssid password >> /etc/wpa_supplicant.conf</code></pre>
+
+<p><code>wpa_supplicant(8)</code>を実行する。</p>
+
+<pre><code># wpa_supplicant -B -i iwn0 -c /etc/wpa_supplicant.conf</code></pre>
+
+<p>無線のランプが光るなど無線デバイスが使えるようになったら、<code>dhcpcd(8)</code>でIPアドレスを取得する。</p>
+
+<pre><code># dhcpcd iwn0</code></pre>
+
+<p>OS起動時にこれらの手順を自動でおこなうには/etc/rc.confに以下を追記する。</p>
+
+<pre><code>wpa_supplicant=YES
+wpa_supplicant_flags="-B -i iwn0 -c /etc/wpa_supplicant.conf"
+dhcpcd=YES
+dhcpcd_flags="iwm0"</code></pre>
+
 <h2 id="block">すべて遮断する</h2>
 <h2 id="user">ユーザの作成</h2>
 <h2 id="pkgsrc">pkgsrc(7)のインストール</h2>
