--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
   <li id="essay">Essay
   <ul>
-    <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
+    <li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
     <li><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></li>
+    <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
   </ul>
   </li></ul>
 
