Using HTTPS for CC0 picture

--- a/essay/work_life_barance.html
+++ b/essay/work_life_barance.html
@@ -126,8 +126,8 @@ FLOSSの開発・サポートを主軸に置いている企業も数多くある
 </p>
 <hr>
 <footer>
-<p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
-<a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/"> <div align="center"><img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" /></div></a>
+<p xmlns:dct="https://purl.org/dc/terms/" xmlns:vcard="https://www.w3.org/2001/vcard-rdf/3.0#">
+<a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"> <div align="center"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" /></div></a>
 <br />
 To the extent possible under law, <a rel="dct:publisher" href="https://e-yuuki.org"> <span property="dct:title">Yuuki Enomoto</span></a> has waived all copyright and related or neighboring rights to <span property="dct:title">e-yuuki.org</span>. This work is published from: <span property="vcard:Country" datatype="dct:ISO3166" content="JP" about="https://e-yuuki.org">Japan</span>.
 </p>
