--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -57,11 +57,8 @@ main(void)
 
 <hr>
 <footer>
-<p xmlns:dct="https://purl.org/dc/terms/" xmlns:vcard="https://www.w3.org/2001/vcard-rdf/3.0#">
-<a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"> <div align="center"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" /></div></a>
-<br />
-To the extent possible under law, <a rel="dct:publisher" href="https://e-yuuki.org"><span property="dct:title">Yuuki Enomoto</span></a> has waived all copyright and related or neighboring rights to <span property="dct:title">e-yuuki.org</span>. This work is published from: <span property="vcard:Country" datatype="dct:ISO3166" content="JP" about="https://e-yuuki.org">Japan</span>.
-</p>
+<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
+<p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p>
 </footer>
 </body>
 </html>
