--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
 @media print, screen and (min-width:640px){
-code{line-height:1.4;}
+code{line-height:1.4;font-size:80%;}
 .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph;}
 pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
 @media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-ideograph;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}
@@ -45,6 +45,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
   <li id="essay">Essay
   <ul>
+    <li><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></li>
     <li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
     <li><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></li>
     <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
