--- a/essay/cc0code.html
+++ b/essay/cc0code.html
@@ -44,7 +44,7 @@ This work is published from:
 </p>
 
 <p>
-　さらにimgタグで画像のパス指定にHTTPSを使っていないとFirefoxでは警告が出る。<img src="./img/warinng.png" alt="Warning on Firefox" />
+　さらにimgタグで画像のパス指定にHTTPSを使っていないとFirefoxでは警告が出る。<img src="./img/warning.png" alt="Warning on Firefox" />
 </p>
 
 <p>
