--- a/essay/cc0code.html
+++ b/essay/cc0code.html
@@ -44,8 +44,10 @@ This work is published from:
 </p>
 
 <p>
-　さらにimgタグで画像のパス指定にHTTPSを使っていないとFirefoxでは警告が出る。<img src="./img/warning.png" alt="Warning on Firefox" />
+　さらにimgタグで画像のパス指定にHTTPSを使っていないとFirefoxでは警告が出る。
 </p>
+
+<img src="./img/warning.png" alt="Warning on Firefox">
 
 <p>
 　このコードの気に入らない点は、HTMLを使いたいのにXHTMLであること、画像のパスにHTTPSを使っていないこと、そして画像と文章に空白を入れる目的でbrタグを使っていることだ。これらを修正してすっきりしたコードにする。
