--- a/introduction/desktop_howto.html
+++ b/introduction/desktop_howto.html
@@ -16,52 +16,19 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <h1>デスクトップ環境の作り方</h1>
 <hr>
 <h2>なぜ作り方を知っておくと良いのか</h2>
-<p>
-雑な言い方をしてしまえば、GNOMEやKDEまたはXfce4のような統合デスクトップ環境を
-使うのが一番手っ取り早いし機能も豊富だと思う。一方でこれらの「てんこ盛り」な
-環境をインストールしても、たいしてUnixの訓練にはならないとも思う。
-なぜならインストール方法も使い方も簡単すぎて特にこれといって知識やノウハウを
-入出力できないからだ（当然、使い方が簡単すぎるというのは技術やUIの偉大な進歩の
-結果である）。
-</p>
+<p>雑な言い方をしてしまえば、GNOMEやKDEまたはXfce4のような統合デスクトップ環境を使うのが一番手っ取り早いし機能も豊富だと思う。一方でこれらの「てんこ盛り」な環境をインストールしても、たいしてUnixの訓練にはならないとも思う。なぜならインストール方法も使い方も簡単すぎて特にこれといって知識やノウハウを入出力できないからだ（当然、使い方が簡単すぎるというのは技術やUIの偉大な進歩の結果である）。</p>
 
-<p>
-だから日常生活で使うに耐えるデスクトップ環境を作るには何をインストールして
-どう設定すればいいのかを覚えるには、統合デスクトップ環境を使うよりもひとつひとつ
-パッケージをインストールして設定する他ない。
-また稀なケースとして、マシンスペックがあまりにも低すぎて
-Xfce4ですらまともに動かないこともあるだろう。
-こんな事態に直面したとき統合デスクトップ環境以外知らなければ話にならない
-（こんなケースそのものが話にならない極限環境ではあるけれど）。
-</p>
+<p>だから日常生活で使うに耐えるデスクトップ環境を作るには何をインストールしてどう設定すればいいのかを覚えるには、統合デスクトップ環境を使うよりもひとつひとつパッケージをインストールして設定する他ない。また稀なケースとして、マシンスペックがあまりにも低すぎてXfce4ですらまともに動かないこともあるだろう。こんな事態に直面したとき統合デスクトップ環境以外知らなければ話にならない（こんなケースそのものが話にならない極限環境ではあるけれど）。</p>
 
-<p>
-ある程度デスクトップ環境の作り方を把握し、デスクトップ環境の要素を抑えておけば
-いざというときに役に立つ。そのいざというときは前述したような極限環境下で
-作業せざるを得ないときかもしれないし、最小構成でインストールされた
-GNU/Linuxの上でデスクトップ環境を作りたくなったときとか、そもそもインストーラが
-デスクトップ環境を提供していないOSを使うときかもしれない。
-知っていると知っていないとでは大違いだ。
-</p>
+<p>ある程度デスクトップ環境の作り方を把握し、デスクトップ環境の要素を抑えておけばいざというときに役に立つ。そのいざというときは前述したような極限環境下で作業せざるを得ないときかもしれないし、最小構成でインストールされたGNU/Linuxの上でデスクトップ環境を作りたくなったときとか、そもそもインストーラがデスクトップ環境を提供していないOSを使うときかもしれない。知っていると知っていないとでは大違いだ。</p>
 
 <h2>GUI環境に必要なソフトウェア</h2>
 
-<p>
-「デスクトップ環境」になにが必要であるかはユーザに強く依存する。
-Webブラウザさえあれば十分というユーザもいれば、
-動画編集ソフトウェアが不可欠なユーザもいる。
-様々なニーズをすべて包括したデスクトップ環境を用意するのは難しい。
-そこで、ここではマウスを使ってウィンドウを自在に動かせられるグラフィカルな環境
-（GUI）を用意するにはなにをインストールすればいいのかのみ説明する。
-</p>
+<p>デスクトップ環境」になにが必要であるかはユーザに強く依存する。Webブラウザさえあれば十分というユーザもいれば、動画編集ソフトウェアが不可欠なユーザもいる。様々なニーズをすべて包括したデスクトップ環境を用意するのは難しい。そこで、ここではマウスを使ってウィンドウを自在に動かせられるグラフィカルな環境（GUI）を用意するにはなにをインストールすればいいのかのみ説明する。</p>
 
 <h3>NetBSDのX</h3>
 
-<p>
-NetBSD 8.0ではベースシステムでGUI環境が提供されている。
-以下のtarballをインストール時に選択するか、FTPサーバからダウンロードして
-ルートディレクトリに展開する。
-</p>
+<p>NetBSDではGUI環境のために"X11"と呼ばれるソフトウェアを使う。FreeBSDと違いNetBSD 8.0ではベースシステムでX11が提供されている。以下のtarballをインストール時に選択するか、FTPサーバからダウンロードしてルートディレクトリに展開する。</p>
 
 <ul>
 <li>xbase.tgz</li>
@@ -70,29 +37,72 @@ NetBSD 8.0ではベースシステムでGUI環境が提供されている。
 <li>xserver.tgz</li>
 </ul>
 
+<p>X11はサーバとクライアントが分離しており、Xサーバが動くマシン上でXクライアントのソフトウェア（FirefoxやThunderbirdなど）が描画される。ここではクライアントとサーバ両方をインストールしていることになる。デスクトップ用途ではX11のサーバ・クライアントモデルを特別に意識することはない。</p>
+
 <h3>/etc/X11/xorg.conf</h3>
 
-<p>
-X11はサーバとクライアントが分離しており、Xサーバが動くマシン上で
-Xクライアントのソフトウェア（FirefoxやThunderbirdなど）が描画される。
-<code>xorg.conf(5)</code>はXサーバの設定ファイルだ。
-</p>
+<p><code>xorg.conf(5)</code>はXサーバの設定ファイルだ。</p>
 
-<p>
-もっとも、これをゼロから書くわけではない。ユーザは<code>xorg.conf(5)</code>を
-自動で生成する<code>Xorg(1)</code>の<code>-configure</code>オプションを実行し、
-ディスプレイの拡張時やマウスの設定など、必要なときだけ設定ファイルを編集する。
-このコマンドを実行すると、rootユーザのホームディレクトリにxorg.conf.newという
-ファイルが作られているので、それを/etc/X11ディレクトリの下に移動させる。
-</p>
+<p>もっとも、これをゼロから書くわけではない。ユーザは<code>xorg.conf(5)</code>を自動で生成する<code>Xorg(1)</code>の<code>-configure</code>オプションを実行し、必要なときだけ設定ファイルを編集する。ディスプレイの拡張やマウスの設定を細かくしたいときに初めてエディタで開くことになるだろう。</p>
+
+<p>このコマンドを実行すると、rootユーザのホームディレクトリにxorg.conf.newというファイルが作られるので、それを/etc/X11ディレクトリの下に移動させる。</p>
 
 <pre><code># X -configure
 # mv /root/xorg.conf.new /etc/X11/xorg.conf</code></pre>
 
 <h3>ウィンドウマネージャ</h3>
 
+<figure>
+<blockquote><p>Xでは、このウィンドウの外見や操作性を提供しているのは<b>ウィンドウマネージャ</b>というプログラムです。デフォルトでは、TWMというウィンドウマネージャが動作しています。これをほかのものに変更したりカスタマイズしたりすることで、見違えるようなデスクトップ環境を作り出すことができます。なお、ここでいう「デスクトップ環境」とはウィンドウマネージャ単体ではなく、共通した外観や操作性を持ったアプリケーション群一体を指します。</p></blockquote>
+<footer>&mdash; <cite>FreeBSD徹底入門 [改訂版]</cite>, p296</footer>
+</figure>
 
-<h3>$HOME/xinitrc</h3>
+<p>ウィンドウマネージャは数え切れないほど多くの実装がありすべてを紹介するのは不可能だ。本ページでは"i3"というタイル型ウィンドウマネージャをおすすめするが、これは操作方法を覚えるのに少し時間がかかる。多くの人にとっては"JWM"や"Window Maker"といったスタック型ウィンドウマネージャが扱いやすいだろう。ウィンドウマネージャのパッケージをひとつずつ試していって好みのものを模索するのがいいだろう。</p>
+
+<h3>$HOME/.xinitrc</h3>
+
+<p><code>xinitrc</code>は<code>xinit(1)</code>が読み込むスクリプトだ。<code>xinit(1)</code>はXサーバを動かし、<code>xinitrc</code>で指定されているクライアントプログラムを実行する。これは各ユーザのホームディレクトリに隠しファイルとして置いておく。<code>xinitrc</code>の内容はユーザがなにを使いたいかによって左右されるので、クライアントソフトウェアの解説をするとき設定方法のいち手順として<code>xinitrc</code>になにを書くべきか説明されるのが一般的だ。</p>
+
+<p>たとえば僕が普段使っているデスクトップ環境の<code>$HOME/.xinitrc</code>は次の通り。</p>
+
+<pre><code>#!/bin/sh
+
+# Language
+export LANG="ja_JP.UTF-8"
+
+# Font
+xset fp+ /usr/pkg/share/fonts/X11/TTF/
+
+# No bell
+xset b off
+
+# Keybord layout
+setxkbmap -model us -layout us -option ctrl:nocaps
+
+# For inputmethod/ibus-mozc
+export XMODIFIERS="@im=ibus"
+export GTK_IM_MODULE="ibus"
+export QT_IM_MODULE="ibus"
+export DefaultIMModule="ibus"
+
+# For i3-dmenu-desktop
+export XDG_DATA_DIRS="/usr/pkg/share:$XDG_DATA_DIRS"
+
+xmodmap $HOME/.Xmodmap
+/usr/pkg/bin/ibus-daemon -drx
+/usr/pkg/bin/i3</code></pre>
+
+<h2>まとめ</h2>
+
+<p>グラフィカルな環境を用意するには最低限以下のものを用意する。</p>
+
+<ul>
+  <li>X11</li>
+  <li>ウィンドウマネージャ</li>
+  <li><code>$HOME/.xinitrc</code></li>
+</ul>
+
+<p>あとは必要に応じてソフトウェアをインストールし<code>xinitrc</code>を編集すればいい。</p>
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
