--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
-@media print, screen and (min-width:640px){
-code{line-height:1.4;font-size:80%;}
-.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph;}
-pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
+@media print, screen and (min-width:640px){code{line-height:1.4;font-size:80%;} .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-ideograph;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
 @media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-ideograph;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}
 </style>
 <title>e-yuuki.org</title>
@@ -17,40 +14,47 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <hr>
 <ul>
-  <li><a href="#articles">Web Articles</a>
-    <ul>
-      <li><a href="./introduction/index.html">Unix入門</a></li>
-      <li><a href="#netbsd">NetBSD</a></li>
-      <li><a href="#essay">Essay</a></li>
-    </ul>
-  </li>
-  <li><a href="#papers">Papers and Presentations</a></li>
-  <li><a href="#links">Links</a></li>
-  <li><a href="#fingerprint">Fingerprint</a>
-  <li><a href="#about">About</a></li>
+<li><a href="#articles">Web Articles</a>
+<ul>
+<li><a href="./introduction/index.html">Unix入門</a></li>
+<li><a href="#netbsd">NetBSD</a></li>
+<li><a href="#coding">Coding</a></li>
+<li><a href="#essay">Essay</a></li>
+</ul>
+</li>
+<li><a href="#papers">Papers and Presentations</a></li>
+<li><a href="#links">Links</a></li>
+<li><a href="#fingerprint">Fingerprint</a>
+<li><a href="#about">About</a></li>
 </ul>
 
 <h2 id="articles">Web Articles</h2>
 
 <ul>
-  <li><a href="./introduction/index.html">Unix入門</a></li>
+<li><a href="./introduction/index.html">Unix入門</a></li>
 
-  <li id="netbsd">NetBSD
-  <ul>
-    <li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
-    <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
-    <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
-    <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
-  </ul></li>
+<li id="netbsd">NetBSD
+<ul>
+<li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
+<li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
+<li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
+<li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
+</ul></li>
 
-  <li id="essay">Essay
-  <ul>
-    <li><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></li>
-    <li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
-    <li><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></li>
-    <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
-  </ul>
-  </li></ul>
+<li id="coding">Coding
+<ul>
+<li><a href="./coding/html.html">私家版HTML Coding Style</a></li>
+</ul>
+</li>
+
+<li id="essay">Essay
+<ul>
+<li><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></li>
+<li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
+<li><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></li>
+<li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
+</ul>
+</li></ul>
 
 <h2 id="papers">Papers and Presentations</h2>
 <ul>
