--- a/netbsd/update_pkgsrc.html
+++ b/netbsd/update_pkgsrc.html
@@ -74,7 +74,7 @@ SANDBOX_CONFFILE="/var/pkg_comp/sandbox.conf"
 # Target file layout.
 LOCALBASE="/usr/pkg"
 PKG_DBDIR="${LOCALBASE}/libdata/pkgdb"
-SYSCONFDIR="/etc"
+SYSCONFDIR="${LOCALBASE}/etc"
 VARBASE="/var"
 
 # List of packages to build during automatic execution.  We source these
